--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,7 +4,7 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
 
     %title
-      Catawiki Task
+      Self Publisher
 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false
     = javascript_include_tag 'application', 'data-turbolinks-track' => false
