--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -22,14 +22,14 @@
           .action
             = link_to action_button('View', 'fa-search'), user_path(user), class: 'button success'
 
-          - if can? :manage, user
+          - if can?(:edit, user)
             .action
               = link_to action_button('Edit', 'fa-pencil-square-o'), edit_user_path(user), class: 'button warning'
 
-            - unless current_user == user
-              .action
-                = link_to action_button('Delete', 'fa-trash-o'), user_path(user), class: 'button alert', data: { method: :delete, confirm: 'Are you sure?', remote: true }
+          - if can?(:destroy, user)
+            .action
+              = link_to action_button('Delete', 'fa-trash-o'), user_path(user), class: 'button alert', data: { method: :delete, confirm: 'Are you sure?', remote: true }
 
-- if can? :create, User
+- if can?(:create, User)
   .add_user
     = link_to action_button('Add User', 'fa-plus'), new_user_path, class: 'button'
